# protobuf_tools

./: .gitignore  .gitmodules  1-download_protobuf_source.bat  2-build_protobuf.bat  3-generate.bat  README.md
proto/: MESSAGE.proto  protocal.proto
test/: .gitignore
test/data/: config.xml
test/data/cpp/: message.pb
test/data/lua/: message.pb
test/src/cpp/: CMakeLists.txt  config_reader.cpp  config_reader.h  main.cpp  run_cpp.bat
test/src/cpp/utils/: CMakeLists.txt  global.h  protobuf_utils.cpp  protobuf_utils.h  string_utils.cpp  string_utils.h  utility.cpp  utility.h
test/src/lua/: run_lua.bat  test.lua
test/src/lua/utils/: util.lua
