CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pb_test_cpp)

SET(PBTOOL_ROOT
    ${CMAKE_HOME_DIRECTORY}/../../..
)

SET(COMMON_OUTPUT
    ${CMAKE_HOME_DIRECTORY}/output
)

IF(WIN32)
    SET(CMAKE_C_FLAGS_DEBUG "/MTd /ZI /Od")
    SET(CMAKE_C_FLAGS_RELEASE "/MT /Zi /O2")
    SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /ZI /Od")
    SET(CMAKE_CXX_FLAGS_RELEASE "/MT /Zi /O2")
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMMON_OUTPUT})

ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/externals)
ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/utils)


INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/externals)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/utils)
INCLUDE_DIRECTORIES(${PBTOOL_ROOT}/protoc_3.6.x/include)
INCLUDE_DIRECTORIES(${PBTOOL_ROOT}/output/cpp)

LINK_DIRECTORIES(${PBTOOL_ROOT}/protoc_3.6.x/lib)
LINK_DIRECTORIES(${COMMON_OUTPUT}/${CMAKE_BUILD_TYPE})

# protos
FILE(GLOB HEADER_PROTOS "${PBTOOL_ROOT}/output/cpp/*.h")
FILE(GLOB SRC_PROTOS "${PBTOOL_ROOT}/output/cpp/*.cc")
#ADD_LIBRARY(protos STATIC ${SRC_PROTOS})
#TARGET_LINK_LIBRARIES(protos libprotobufd)

# main
SET(SRC_MAIN main.cpp)
ADD_EXECUTABLE(main ${SRC_MAIN} ${SRC_PROTOS})
TARGET_LINK_LIBRARIES(main libprotobufd)
TARGET_LINK_LIBRARIES(main utils)
TARGET_LINK_LIBRARIES(main protos)
