CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pb_test_cpp)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
INCLUDE(UseBackportedModules)

IF(MSVC)
    INCLUDE(CreateLaunchers)
ENDIF()

SET(PBTOOL_ROOT
    ${CMAKE_HOME_DIRECTORY}/../../..
)

SET(COMMON_OUTPUT
    ${CMAKE_HOME_DIRECTORY}/bin
)

IF(WIN32)
    SET(CMAKE_C_FLAGS_DEBUG "/MTd /ZI /Od")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO "/MTd /ZI /Od")
    SET(CMAKE_C_FLAGS_MINSIZEREL "/MTd /ZI /Od")
    SET(CMAKE_C_FLAGS_RELEASE "/MT /Zi /O2")
    SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /ZI /Od")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MTd /ZI /Od")
    SET(CMAKE_CXX_FLAGS_MINSIZEREL "/MTd /ZI /Od")
    SET(CMAKE_CXX_FLAGS_RELEASE "/MT /Zi /O2")
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COMMON_OUTPUT})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${COMMON_OUTPUT})

ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/externals)
ADD_SUBDIRECTORY(${CMAKE_HOME_DIRECTORY}/utils)

INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/externals)
INCLUDE_DIRECTORIES(${CMAKE_HOME_DIRECTORY}/utils)
INCLUDE_DIRECTORIES(${PBTOOL_ROOT}/protoc_3.6.x/include)
INCLUDE_DIRECTORIES(${PBTOOL_ROOT}/output/cpp)

LINK_DIRECTORIES(${PBTOOL_ROOT}/protoc_3.6.x/lib)
LINK_DIRECTORIES(${COMMON_OUTPUT}/${CMAKE_BUILD_TYPE})

# protos
FILE(GLOB HEADER_PROTOS "${PBTOOL_ROOT}/output/cpp/*.h")
FILE(GLOB SRC_PROTOS "${PBTOOL_ROOT}/output/cpp/*.cc")

# main
SET(SRC_MAIN main.cpp config_reader.cpp)
ADD_EXECUTABLE(main ${SRC_MAIN} ${SRC_PROTOS})
TARGET_LINK_LIBRARIES(main libprotobufd)
TARGET_LINK_LIBRARIES(main utils)

CREATE_TARGET_LAUNCHER(main WORKING_DIRECTORY ${COMMON_OUTPUT})
